--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
     <ul>
-        <li><a href="index.html">🏠 Trang Chủ</a></li>
-        <li><a href="mien-bac.html">🌿 Miền Bắc</a></li>
-        <li><a href="mien-trung.html">☀️ Miền Trung</a></li>
-        <li><a href="mien-nam.html">🌴 Miền Nam</a></li>
+        <li><a href="index.html"> Trang Chủ</a></li>
+        <li><a href="mien-bac.html"> Miền Bắc</a></li>
+        <li><a href="mien-trung.html"> Miền Trung</a></li>
+        <li><a href="mien-nam.html"> Miền Nam</a></li>
     </ul>
 </nav>
 
