Remove icons from miền buttons
Removed icons from the miền buttons in index.html.

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
 
     <div class="mien-buttons">
         <a href="mien-bac.html">
-            <span class="mien-icon">🌿</span>
+            <span class="mien-icon"></span>
             Miền Bắc
             <br><small style="font-weight:normal; font-size:14px;">Hà Nội · Quảng Ninh · Lào Cai</small>
         </a>
         <a href="mien-trung.html">
-            <span class="mien-icon">☀️</span>
+            <span class="mien-icon"></span>
             Miền Trung
             <br><small style="font-weight:normal; font-size:14px;">Đà Nẵng · Huế · Khánh Hòa</small>
         </a>
         <a href="mien-nam.html">
-            <span class="mien-icon">🌴</span>
+            <span class="mien-icon"></span>
             Miền Nam
             <br><small style="font-weight:normal; font-size:14px;">TP. Hồ Chí Minh · Cần Thơ · An Giang</small>
         </a>
