--- a/mien-bac.html
+++ b/mien-bac.html
@@ -11,16 +11,16 @@
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
     <ul>
-        <li><a href="index.html">🏠 Trang Chủ</a></li>
-        <li><a href="mien-bac.html">🌿 Miền Bắc</a></li>
-        <li><a href="mien-trung.html">☀️ Miền Trung</a></li>
-        <li><a href="mien-nam.html">🌴 Miền Nam</a></li>
+        <li><a href="index.html"> Trang Chủ</a></li>
+        <li><a href="mien-bac.html"> Miền Bắc</a></li>
+        <li><a href="mien-trung.html"> Miền Trung</a></li>
+        <li><a href="mien-nam.html"> Miền Nam</a></li>
     </ul>
 </nav>
 
 <!-- TIÊU ĐỀ TRANG -->
 <div class="page-header">
-    <h1>🌿 Miền Bắc Việt Nam</h1>
+    <h1> Miền Bắc Việt Nam</h1>
     <p>Vùng đất ngàn năm văn hiến – Thiên nhiên hùng vĩ – Văn hóa đậm đà</p>
 </div>
 
