--- a/mien-nam.html
+++ b/mien-nam.html
@@ -11,16 +11,16 @@
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
     <ul>
-        <li><a href="index.html">🏠 Trang Chủ</a></li>
-        <li><a href="mien-bac.html">🌿 Miền Bắc</a></li>
-        <li><a href="mien-trung.html">☀️ Miền Trung</a></li>
-        <li><a href="mien-nam.html">🌴 Miền Nam</a></li>
+        <li><a href="index.html"> Trang Chủ</a></li>
+        <li><a href="mien-bac.html"> Miền Bắc</a></li>
+        <li><a href="mien-trung.html"> Miền Trung</a></li>
+        <li><a href="mien-nam.html"> Miền Nam</a></li>
     </ul>
 </nav>
 
 <!-- TIÊU ĐỀ TRANG -->
 <div class="page-header">
-    <h1>🌴 Miền Nam Việt Nam</h1>
+    <h1> Miền Nam Việt Nam</h1>
     <p>Vùng đất phương Nam – Sông nước mênh mang – Con người hào phóng</p>
 </div>
 
@@ -81,9 +81,11 @@
 
 <!-- CHÂN TRANG -->
 <footer>
+    <footer>
     <p><strong>KHÁM PHÁ VIỆT NAM</strong></p>
     <p>Website giới thiệu 3 miền Bắc – Trung – Nam của Việt Nam</p>
-    <p>Được tạo bằng HTML &amp; CSS thuần</p>
+    <p>Được tạo bởi nhóm 3 của lớp 12A5</p>
+</footer>
 </footer>
 
 </body>
