Add header with logo and group name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<header>
+    <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
+    <span>Tổ 3</span>
+</header>
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
     <ul>
