Add header section with logo and title

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!-- ĐẦU TRANG -->
 <header>
     <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
     <span>Tổ 3</span>
@@ -20,7 +21,6 @@
         <li><a href="mien-nam.html"> Miền Nam</a></li>
     </ul>
 </nav>
-
 <!-- BANNER -->
 <div class="banner">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Halong_Bay_Vietnam.jpg/1280px-Halong_Bay_Vietnam.jpg" alt="Phong cảnh Việt Nam">
