Add header with logo and title to mien-nam.html
Added header section with logo and title.

--- a/mien-nam.html
+++ b/mien-nam.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<!-- ĐẦU TRANG -->
+<header>
+    <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
+    <span>Tổ 3</span>
+</header>
+    
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
     <ul>
@@ -17,7 +23,6 @@
         <li><a href="mien-nam.html"> Miền Nam</a></li>
     </ul>
 </nav>
-
 <!-- TIÊU ĐỀ TRANG -->
 <div class="page-header">
     <h1> Miền Nam Việt Nam</h1>
