--- a/tinh/da-nang.html
+++ b/tinh/da-nang.html
@@ -8,13 +8,18 @@
 </head>
 <body>
 
+<!-- ĐẦU TRANG -->
+<header>
+    <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
+    <span>Tổ 3</span>
+</header>
 <!-- THANH ĐIỀU HƯỚNG -->
 <nav>
     <ul>
-        <li><a href="../index.html">🏠 Trang Chủ</a></li>
-        <li><a href="../mien-bac.html">🌿 Miền Bắc</a></li>
-        <li><a href="../mien-trung.html">☀️ Miền Trung</a></li>
-        <li><a href="../mien-nam.html">🌴 Miền Nam</a></li>
+        <li><a href="index.html"> Trang Chủ</a></li>
+        <li><a href="mien-bac.html"> Miền Bắc</a></li>
+        <li><a href="mien-trung.html"> Miền Trung</a></li>
+        <li><a href="mien-nam.html"> Miền Nam</a></li>
     </ul>
 </nav>
 
