--- a/tinh/khanh-hoa.html
+++ b/tinh/khanh-hoa.html
@@ -148,7 +148,8 @@
 <footer>
     <p><strong>KHÁM PHÁ VIỆT NAM</strong></p>
     <p>Website giới thiệu 3 miền Bắc – Trung – Nam của Việt Nam</p>
-    <p>Được tạo bằng HTML &amp; CSS thuần</p>
+    <p>Được tạo bởi nhóm 3 của lớp 12A5</p>
+
 </footer>
 
 </body>
