--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </nav>
 <!--BANNER-->
 <div class="banner">
-    <img src="https://www.google.com.vn/imgres?q=vn&imgurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-illustration%2Fvietnam-flag-vn-national-banner-260nw-2154062189.jpg&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fvi%2Fimage-illustration%2Fvietnam-flag-vn-national-banner-patriotism-2154062189&docid=hFXc25U4L7XjAM&tbnid=4GrH6eXO6MwrgM&vet=12ahUKEwiAua24i_KSAxXtdfUHHbzlADYQnPAOegQIGhAB..i&w=390&h=280&hcb=2&ved=2ahUKEwiAua24i_KSAxXtdfUHHbzlADYQnPAOegQIGhAB" alt="Phong cảnh Việt Nam">
+    <img src="https://www.tnc.com.vn/uploads/newp/n2025/hinh-nen-la-co-viet-nam-2980.webp" alt="Phong cảnh Việt Nam">
     <div class="banner-text">
         <h1>KHÁM PHÁ VIỆT NAM</h1>
         <p>Đất nước tươi đẹp – Con người thân thiện – Văn hóa phong phú</p>
