--- a/mien-bac.html
+++ b/mien-bac.html
@@ -48,7 +48,7 @@
 
         <!-- Hà Nội -->
         <div class="tinh-card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg/640px-Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg" alt="Hà Nội">
+            <img src="hhttp://vov2.vov.vn/sites/default/files/styles/large/public/2022-03/doc-dao-le-hoi-van-hoa-du-lich-ha-noi-20201593134202.jpg" alt="Hà Nội">
             <div class="tinh-card-body">
                 <h3>Hà Nội</h3>
                 <p>Thủ đô nghìn năm văn hiến, trung tâm chính trị – văn hóa – kinh tế của cả nước.</p>
