--- a/mien-bac.html
+++ b/mien-bac.html
@@ -68,7 +68,7 @@
 
         <!-- Lào Cai -->
         <div class="tinh-card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Sa_Pa_Vietnam.jpg/640px-Sa_Pa_Vietnam.jpg" alt="Lào Cai">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJWXHnsRztSoUB89G0IP5P47fddwH3id0F-g&s" alt="Lào Cai">
             <div class="tinh-card-body">
                 <h3>Lào Cai</h3>
                 <p>Mảnh đất biên giới với Sa Pa mây mù, ruộng bậc thang và đỉnh Fansipan hùng vĩ.</p>
