--- a/tinh/da-nang.html
+++ b/tinh/da-nang.html
@@ -25,7 +25,7 @@
 
 <!-- BANNER -->
 <div class="banner-tinh">
-    <img src="file:///C:/Users/%C4%91%E1%BA%A7n/Pictures/%C4%91%E1%BA%A7n/t%E1%BA%A3i%20xu%E1%BB%91ng%20(1).jpg" alt="Đà Nẵng về đêm">
+    <img src="file:///C:/Users/%C4%91%E1%BA%A7n/Pictures/%C4%91%E1%BA%A7n/t%E1%BA%A3i%20xu%E1%BB%91ng%20(1).jpg" alt="Đà Nẵng ">
 </div>
 
 <!-- NỘI DUNG CHÍNH -->
