--- a/mien-bac.html
+++ b/mien-bac.html
@@ -52,7 +52,7 @@
             <div class="tinh-card-body">
                 <h3>Hà Nội</h3>
                 <p>Thủ đô nghìn năm văn hiến, trung tâm chính trị – văn hóa – kinh tế của cả nước.</p>
-                <a href="tinh/ha-noi.html">Xem chi tiết →</a>
+                <a href="ha-noi.html">Xem chi tiết →</a>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
             <div class="tinh-card-body">
                 <h3>Quảng Ninh</h3>
                 <p>Quê hương của Vịnh Hạ Long – Di sản Thiên nhiên Thế giới được UNESCO công nhận.</p>
-                <a href="tinh/quang-ninh.html">Xem chi tiết →</a>
+                <a href="quang-ninh.html">Xem chi tiết →</a>
             </div>
         </div>
 
@@ -72,7 +72,7 @@
             <div class="tinh-card-body">
                 <h3>Lào Cai</h3>
                 <p>Mảnh đất biên giới với Sa Pa mây mù, ruộng bậc thang và đỉnh Fansipan hùng vĩ.</p>
-                <a href="tinh/lao-cai.html">Xem chi tiết →</a>
+                <a href="lao-cai.html">Xem chi tiết →</a>
             </div>
         </div>
 
