--- a/mien-nam.html
+++ b/mien-nam.html
@@ -56,7 +56,7 @@
             <div class="tinh-card-body">
                 <h3>TP. Hồ Chí Minh</h3>
                 <p>Thành phố lớn nhất Việt Nam – Trung tâm kinh tế, thương mại và văn hóa năng động nhất nước.</p>
-                <a href="tinh/tphcm.html">Xem chi tiết →</a>
+                <a href="tphcm.html">Xem chi tiết →</a>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
             <div class="tinh-card-body">
                 <h3>Cần Thơ</h3>
                 <p>Thủ phủ miền Tây với chợ nổi Cái Răng sầm uất và vườn cây ăn trái bốn mùa trĩu quả.</p>
-                <a href="tinh/can-tho.html">Xem chi tiết →</a>
+                <a href="can-tho.html">Xem chi tiết →</a>
             </div>
         </div>
 
@@ -76,7 +76,7 @@
             <div class="tinh-card-body">
                 <h3>An Giang</h3>
                 <p>Tỉnh biên giới với núi Cấm huyền bí, mùa nước nổi thơ mộng và lễ hội Bà Chúa Xứ nổi tiếng.</p>
-                <a href="tinh/an-giang.html">Xem chi tiết →</a>
+                <a href="an-giang.html">Xem chi tiết →</a>
             </div>
         </div>
 
