--- a/mien-trung.html
+++ b/mien-trung.html
@@ -55,7 +55,7 @@
             <div class="tinh-card-body">
                 <h3>Đà Nẵng</h3>
                 <p>Thành phố đáng sống nhất Việt Nam với bãi biển Mỹ Khê và cầu Rồng nổi tiếng.</p>
-                <a href="tinh/da-nang.html">Xem chi tiết →</a>
+                <a href="da-nang.html">Xem chi tiết →</a>
             </div>
         </div>
 
@@ -65,7 +65,7 @@
             <div class="tinh-card-body">
                 <h3>Thừa Thiên Huế</h3>
                 <p>Cố đô triều Nguyễn – Di sản văn hóa thế giới với Đại Nội, lăng tẩm và ẩm thực cung đình.</p>
-                <a href="tinh/hue.html">Xem chi tiết →</a>
+                <a href="hue.html">Xem chi tiết →</a>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             <div class="tinh-card-body">
                 <h3>Khánh Hòa</h3>
                 <p>Thành phố biển Nha Trang xinh đẹp với vịnh biển trong xanh và hải sản phong phú.</p>
-                <a href="tinh/khanh-hoa.html">Xem chi tiết →</a>
+                <a href="khanh-hoa.html">Xem chi tiết →</a>
             </div>
         </div>
 
