Update banner image for Hanoi page

--- a/ha-noi.html
+++ b/ha-noi.html
@@ -24,7 +24,7 @@
 
 <!-- BANNER -->
 <div class="banner-tinh">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg/1280px-Hoan_Kiem_Lake_and_Ngoc_Son_Temple%2C_Hanoi%2C_Vietnam.jpg" alt="Hồ Hoàn Kiếm – Hà Nội">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Hoan_Kiem.jpg/1280px-Hoan_Kiem.jpg" alt="Hồ Hoàn Kiếm – Hà Nội">
 </div>
 
 <!-- NỘI DUNG CHÍNH -->
