--- a/khanh-hoa.html
+++ b/khanh-hoa.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khánh Hòa – Khám Phá Việt Nam</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- ĐẦU TRANG -->
@@ -24,7 +25,7 @@
 
 <!-- BANNER -->
 <div class="banner-tinh">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Nha_Trang_beach_2.jpg/1280px-Nha_Trang_beach_2.jpg" alt="Bãi biển Nha Trang – Khánh Hòa">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQv62K0oc-mPU7znRuNIsUNPGpu7SoxJ0SMFA&s" alt="Bãi biển Nha Trang – Khánh Hòa">
 </div>
 
 <!-- NỘI DUNG CHÍNH -->
@@ -59,19 +60,19 @@
     <div class="dulịch-list">
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Nha_Trang_beach_2.jpg/640px-Nha_Trang_beach_2.jpg" alt="Vịnh Nha Trang">
+            <img src="https://thanhnien.mediacdn.vn/uploaded/congthang/2015_09_06/vinpearl-4_SHZN.jpg?width=500" alt="Vịnh Nha Trang">
             <h3>Vịnh Nha Trang</h3>
             <p>Một trong 29 vịnh biển đẹp nhất thế giới với làn nước trong xanh, cát trắng trải dài 7 km. Là thiên đường du lịch biển đảo với các hoạt động lặn biển, ngắm san hô và tắm biển.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Po_Nagar_Cham_Towers.jpg/640px-Po_Nagar_Cham_Towers.jpg" alt="Tháp Bà Ponagar">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZUisnm3b3dKgoVLMfCco55uCTv9PO5POVaA&s" alt="Tháp Bà Ponagar">
             <h3>Tháp Bà Ponagar</h3>
             <p>Quần thể đền tháp Chăm Pa xây dựng từ thế kỷ VII-XII, thờ nữ thần Ponagar. Là di tích lịch sử - văn hóa quan trọng của người Chăm. Hàng năm tổ chức lễ hội Tháp Bà vào tháng 3 âm lịch.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Vinpearl_Land_Nha_Trang.jpg/640px-Vinpearl_Land_Nha_Trang.jpg" alt="Vinpearl Land">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTB947V-SRpbAMYszFN5-fvbgEmUayxMqyaSw&s" alt="Vinpearl Land">
             <h3>Vinpearl Land Nha Trang</h3>
             <p>Khu vui chơi giải trí tổng hợp trên đảo Hòn Tre, kết nối với đất liền bằng cáp treo vượt biển dài nhất thế giới 3,3 km. Có công viên nước, thủy cung và nhiều trò chơi hấp dẫn.</p>
         </div>
@@ -86,19 +87,19 @@
     <div class="amthuc-list">
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Bun_ca_Nha_Trang.jpg/400px-Bun_ca_Nha_Trang.jpg" alt="Bún cá">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrW2ud5GjCBKn8ZXaKU88mNwu_Obhh5nc9fA&s" alt="Bún cá">
             <h3>Bún Cá Nha Trang</h3>
             <p>Nước dùng trong ngọt thanh từ xương cá, ăn kèm cá thu chiên vàng giòn và chả cá thơm lừng. Là món ăn sáng đặc trưng nhất của người Nha Trang.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Nem_nuong_Nha_Trang.jpg/400px-Nem_nuong_Nha_Trang.jpg" alt="Nem nướng Nha Trang">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ66RebGqSq22Ap4IR74HWjVxLyEMvEbcjEFw&s" alt="Nem nướng Nha Trang">
             <h3>Nem Nướng Nha Trang</h3>
             <p>Cuốn nem nướng thơm lừng với bánh tráng mỏng, rau sống, đồ chua và chấm nước sốt đặc biệt màu đỏ. Đây là món ăn nổi tiếng đặc trưng chỉ có ở Nha Trang.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Lobster_Nha_Trang.jpg/400px-Lobster_Nha_Trang.jpg" alt="Tôm hùm">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8nx06bhRYD9HC0iLAwDgXbi5QZEkMTB_WOA&s" alt="Tôm hùm">
             <h3>Tôm Hùm Nha Trang</h3>
             <p>Đặc sản hải sản cao cấp nhất Nha Trang. Tôm hùm bông nuôi ở vịnh Nha Trang và Cam Ranh nổi tiếng ngon và tươi, thường hấp hoặc nướng phô mai.</p>
         </div>
@@ -132,11 +133,11 @@
     <h2>5. Thư viện hình ảnh</h2>
 
     <div class="gallery">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Nha_Trang_beach_2.jpg/400px-Nha_Trang_beach_2.jpg" alt="Bãi biển Nha Trang">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Po_Nagar_Cham_Towers.jpg/400px-Po_Nagar_Cham_Towers.jpg" alt="Tháp Bà Ponagar">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Vinpearl_Land_Nha_Trang.jpg/400px-Vinpearl_Land_Nha_Trang.jpg" alt="Vinpearl">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Nha_Trang_beach_2.jpg/400px-Nha_Trang_beach_2.jpg" alt="Đảo Nha Trang">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Po_Nagar_Cham_Towers.jpg/400px-Po_Nagar_Cham_Towers.jpg" alt="Di tích Chăm">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTamGe2HlEtqBhhYAVjdBgq_UG5wspeAxBJig&s" alt="Bãi biển Nha Trang">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpfVKpDR3HAqjTwJ48h09RSovdXAeDPnFBXQ&s" alt="Tháp Bà Ponagar">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOU9RXym4nr1Zva6t3KGTtiiyHuOumqsXUEg&s" alt="Vinpearl">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_RDgQOVwzqctgvLL0Q7HLz2DNBpWjIuUwzw&s" alt="Đảo Nha Trang">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU8MWoC3KE5wRKN_RERPZNsALmfD8w2956eg&s" alt="Di tích Chăm">
     </div>
 
     <br>
