--- a/quang-ninh.html
+++ b/quang-ninh.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quảng Ninh – Khám Phá Việt Nam</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -25,7 +26,7 @@
 
 <!-- BANNER -->
 <div class="banner-tinh">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Halong_Bay_Vietnam.jpg/1280px-Halong_Bay_Vietnam.jpg" alt="Vịnh Hạ Long – Quảng Ninh">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/V%E1%BB%8Bnh_H%E1%BA%A1_Long_-_NKS.jpg/250px-V%E1%BB%8Bnh_H%E1%BA%A1_Long_-_NKS.jpg" alt="Vịnh Hạ Long – Quảng Ninh">
 </div>
 
 <!-- NỘI DUNG CHÍNH -->
@@ -60,19 +61,19 @@
     <div class="dulịch-list">
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Halong_Bay_Vietnam.jpg/640px-Halong_Bay_Vietnam.jpg" alt="Vịnh Hạ Long">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNCTkx5Dk6EKhvw6t35PDh9bFeSC307Y8S2Q&s" alt="Vịnh Hạ Long">
             <h3>Vịnh Hạ Long</h3>
             <p>Di sản Thiên nhiên Thế giới được UNESCO công nhận với gần 2.000 hòn đảo lớn nhỏ, hang động kỳ ảo như hang Đầu Gỗ, động Thiên Cung. Là một trong 7 kỳ quan thiên nhiên mới của thế giới (bình chọn 2011).</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Yen_Tu_Pagoda.jpg/640px-Yen_Tu_Pagoda.jpg" alt="Yên Tử">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqYBk7fsgUD7r4jY8XvDfdcDHI8PeJKHJEKg&s" alt="Yên Tử">
             <h3>Núi Yên Tử</h3>
             <p>Trung tâm Phật giáo lớn nhất Việt Nam, gắn với Phật hoàng Trần Nhân Tông. Hàng năm có lễ hội trẩy hội Yên Tử thu hút hàng triệu phật tử. Đỉnh cao 1.068 m với chùa Đồng trên đỉnh.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Tuan_Chau_Island_Halong_Bay.jpg/640px-Tuan_Chau_Island_Halong_Bay.jpg" alt="Đảo Tuần Châu">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDara2PC-M6_i-gWtTGiDI75DpIteI7kR9UA&s" alt="Đảo Tuần Châu">
             <h3>Đảo Tuần Châu</h3>
             <p>Khu du lịch nghỉ dưỡng cao cấp với bãi biển nhân tạo, sân golf, biểu diễn xiếc cá heo và cá voi. Là trung tâm giải trí lớn bậc nhất miền Bắc.</p>
         </div>
@@ -87,19 +88,19 @@
     <div class="amthuc-list">
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Chả_mực_Hạ_Long.jpg/400px-Chả_mực_Hạ_Long.jpg" alt="Chả mực">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQI8dE2WAWHUEJfs_SEJdAxm3KqwzLHg02ToQ&s" alt="Chả mực">
             <h3>Chả Mực Hạ Long</h3>
             <p>Đặc sản số 1 Quảng Ninh, làm từ mực tươi giã tay thủ công, chiên vàng giòn. Hương thơm đặc biệt không nơi nào có được.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Sam_bien_Ha_Long.jpg/400px-Sam_bien_Ha_Long.jpg" alt="Sam biển">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvH7rNAAOB3I35oK049N2xvqNb5YyOeuyqMQ&s" alt="Sam biển">
             <h3>Sam Biển Hạ Long</h3>
             <p>Hải sản đặc trưng chỉ có ở vùng biển Hạ Long, thường được hấp hoặc làm gỏi. Thịt sam thơm ngon, bổ dưỡng, là món ăn đặc sản được nhiều du khách tìm kiếm.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Banh_cuon_Tien_Yen.jpg/400px-Banh_cuon_Tien_Yen.jpg" alt="Bánh gật gù">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjuIr9ETJPS9F0vo7Rj4qTHRXi0CjQn6x1ZQ&s" alt="Bánh gật gù">
             <h3>Bánh Gật Gù Tiên Yên</h3>
             <p>Loại bánh cuốn đặc biệt của vùng Tiên Yên, làm từ gạo địa phương, mềm mướt và dai. Ăn kèm với thịt quay và nước chấm pha chế đặc biệt.</p>
         </div>
@@ -133,11 +134,11 @@
     <h2>5. Thư viện hình ảnh</h2>
 
     <div class="gallery">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Halong_Bay_Vietnam.jpg/400px-Halong_Bay_Vietnam.jpg" alt="Vịnh Hạ Long">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Yen_Tu_Pagoda.jpg/400px-Yen_Tu_Pagoda.jpg" alt="Yên Tử">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Tuan_Chau_Island_Halong_Bay.jpg/400px-Tuan_Chau_Island_Halong_Bay.jpg" alt="Tuần Châu">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Halong_Bay_Vietnam.jpg/400px-Halong_Bay_Vietnam.jpg" alt="Đảo Hạ Long">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Halong_Bay_Vietnam.jpg/400px-Halong_Bay_Vietnam.jpg" alt="Hang động Hạ Long">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNCTkx5Dk6EKhvw6t35PDh9bFeSC307Y8S2Q&s" alt="Vịnh Hạ Long">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqYBk7fsgUD7r4jY8XvDfdcDHI8PeJKHJEKg&s" alt="Yên Tử">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDara2PC-M6_i-gWtTGiDI75DpIteI7kR9UA&s" alt="Tuần Châu">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQP4BeLqKdNKfC5TFiouoDKrDU2BtQFNIPnw&s" alt="Đảo Hạ Long">
+        <img src="https://vnn-imgs-f.vgcloud.vn/2018/10/17/11/6-hang-dong-dep-than-tien-o-ha-long-4.jpg?width=0&s=0u0nCIlnAyIjSoZEwADzrg" alt="Hang động Hạ Long">
     </div>
 
     <br>
