--- a/quang-ninh.html
+++ b/quang-ninh.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP. Hồ Chí Minh – Khám Phá Việt Nam</title>
+    <title>Quảng Ninh – Khám Phá Việt Nam</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <!-- ĐẦU TRANG -->
 <header>
     <img src="https://cdn.hoidap247.com/picture/answer/20221008/large_1665238979470.jpg?v=0" alt="Logo Tổ 3" />
@@ -25,7 +26,7 @@
 
 <!-- BANNER -->
 <div class="banner-tinh">
-    <img src="https://static.tuoitre.vn/tto/i/s626/2015/04/25/41B6gnc8.jpg" alt="TP. Hồ Chí Minh về đêm">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/V%E1%BB%8Bnh_H%E1%BA%A1_Long_-_NKS.jpg/250px-V%E1%BB%8Bnh_H%E1%BA%A1_Long_-_NKS.jpg" alt="Vịnh Hạ Long – Quảng Ninh">
 </div>
 
 <!-- NỘI DUNG CHÍNH -->
@@ -36,19 +37,19 @@
     <div class="thong-tin">
         <div class="thong-tin-item">
             <strong>Vị trí địa lý</strong>
-            Nằm ở vùng Đông Nam Bộ, phía Nam Việt Nam. Giáp các tỉnh: Bình Dương, Đồng Nai, Bà Rịa-Vũng Tàu, Long An và Tiền Giang. Là đầu mối giao thông quan trọng nhất miền Nam.
+            Nằm ở vùng Đông Bắc Việt Nam, giáp Trung Quốc ở phía Bắc và biển Đông ở phía Đông và Nam. Giáp các tỉnh: Lạng Sơn, Bắc Giang, Hải Dương, Hải Phòng.
         </div>
         <div class="thong-tin-item">
             <strong>Đặc điểm nổi bật</strong>
-            Thành phố lớn nhất Việt Nam và là trung tâm kinh tế – tài chính số 1 cả nước. Trước đây có tên là Sài Gòn, được người dân quen gọi là "Hòn ngọc Viễn Đông". Là thành phố năng động, phát triển nhanh nhất Việt Nam.
+            Tỉnh có đường bờ biển dài 250 km với hàng nghìn đảo đá vôi. Nổi tiếng nhất với Vịnh Hạ Long – kỳ quan thiên nhiên thế giới được UNESCO công nhận 2 lần (1994 và 2000).
         </div>
         <div class="thong-tin-item">
             <strong>Diện tích</strong>
-            2.095 km²
+            6.206 km²
         </div>
         <div class="thong-tin-item">
             <strong>Dân số</strong>
-            Hơn 9,3 triệu người (2022) – đông dân nhất Việt Nam
+            Hơn 1,3 triệu người (2022)
         </div>
     </div>
 
@@ -60,21 +61,21 @@
     <div class="dulịch-list">
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Bitexco_Financial_Tower_20022012_cropped.JPG/330px-Bitexco_Financial_Tower_20022012_cropped.JPG" alt="Bitexco">
-            <h3>Tòa nhà Bitexco Financial Tower</h3>
-            <p>Tòa nhà biểu tượng của TP.HCM cao 68 tầng, 262 m. Sân bay trực thăng hình hoa sen ở tầng 52 là điểm nhấn kiến trúc độc đáo. Có đài quan sát Saigon Skydeck ở tầng 49 ngắm toàn thành phố.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNCTkx5Dk6EKhvw6t35PDh9bFeSC307Y8S2Q&s" alt="Vịnh Hạ Long">
+            <h3>Vịnh Hạ Long</h3>
+            <p>Di sản Thiên nhiên Thế giới được UNESCO công nhận với gần 2.000 hòn đảo lớn nhỏ, hang động kỳ ảo như hang Đầu Gỗ, động Thiên Cung. Là một trong 7 kỳ quan thiên nhiên mới của thế giới (bình chọn 2011).</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG/330px-W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG" alt="Địa đạo Củ Chi">
-            <h3>Địa Đạo Củ Chi</h3>
-            <p>Hệ thống đường hầm ngầm dài 250 km, là căn cứ địa của lực lượng cách mạng trong kháng chiến chống Mỹ. Hiện là di tích lịch sử và điểm du lịch nổi tiếng thu hút hàng triệu lượt khách mỗi năm.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqYBk7fsgUD7r4jY8XvDfdcDHI8PeJKHJEKg&s" alt="Yên Tử">
+            <h3>Núi Yên Tử</h3>
+            <p>Trung tâm Phật giáo lớn nhất Việt Nam, gắn với Phật hoàng Trần Nhân Tông. Hàng năm có lễ hội trẩy hội Yên Tử thu hút hàng triệu phật tử. Đỉnh cao 1.068 m với chùa Đồng trên đỉnh.</p>
         </div>
 
         <div class="dulịch-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Notre_dame_saigon.jpg/250px-Notre_dame_saigon.jpg" alt="Nhà thờ Đức Bà">
-            <h3>Nhà Thờ Đức Bà – Bưu Điện Trung Tâm</h3>
-            <p>Hai công trình kiến trúc Pháp cổ điển nổi tiếng nhất trung tâm Sài Gòn. Nhà thờ Đức Bà được xây dựng từ 1877-1880, là biểu tượng kiến trúc thuộc địa còn lưu lại đến ngày nay.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDara2PC-M6_i-gWtTGiDI75DpIteI7kR9UA&s" alt="Đảo Tuần Châu">
+            <h3>Đảo Tuần Châu</h3>
+            <p>Khu du lịch nghỉ dưỡng cao cấp với bãi biển nhân tạo, sân golf, biểu diễn xiếc cá heo và cá voi. Là trung tâm giải trí lớn bậc nhất miền Bắc.</p>
         </div>
 
     </div>
@@ -87,21 +88,21 @@
     <div class="amthuc-list">
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/H%E1%BB%A7_ti%E1%BA%BFu_nam_vang_gi%C3%B2_4.jpg/250px-H%E1%BB%A7_ti%E1%BA%BFu_nam_vang_gi%C3%B2_4.jpg" alt="Hủ tiếu Nam Vang">
-            <h3>Hủ Tiếu Nam Vang</h3>
-            <p>Nước dùng trong veo ngọt thanh từ xương heo, ăn kèm thịt bằm, tôm, gan heo và hành phi giòn. Là món ăn sáng đặc trưng không thể thiếu của người Sài Gòn.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQI8dE2WAWHUEJfs_SEJdAxm3KqwzLHg02ToQ&s" alt="Chả mực">
+            <h3>Chả Mực Hạ Long</h3>
+            <p>Đặc sản số 1 Quảng Ninh, làm từ mực tươi giã tay thủ công, chiên vàng giòn. Hương thơm đặc biệt không nơi nào có được.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/B%C3%A1nh_m%C3%AC_th%E1%BB%8Bt_n%C6%B0%E1%BB%9Bng.png/250px-B%C3%A1nh_m%C3%AC_th%E1%BB%8Bt_n%C6%B0%E1%BB%9Bng.png" alt="Bánh mì Sài Gòn">
-            <h3>Bánh Mì Sài Gòn</h3>
-            <p>Ổ bánh mì giòn rụm kẹp thịt nguội, chả lụa, pa tê, dưa leo, cà rốt đồ chua và rau thơm. Bánh mì Việt Nam đã được CNN bình chọn là một trong những món ăn đường phố ngon nhất thế giới.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvH7rNAAOB3I35oK049N2xvqNb5YyOeuyqMQ&s" alt="Sam biển">
+            <h3>Sam Biển Hạ Long</h3>
+            <p>Hải sản đặc trưng chỉ có ở vùng biển Hạ Long, thường được hấp hoặc làm gỏi. Thịt sam thơm ngon, bổ dưỡng, là món ăn đặc sản được nhiều du khách tìm kiếm.</p>
         </div>
 
         <div class="amthuc-item">
-            <img src="https://cdn.xanhsm.com/2025/01/1d3dbc6e-banh-canh-cua-sai-gon-2-min.jpg" alt="Bánh canh cua">
-            <h3>Bánh Canh Cua</h3>
-            <p>Sợi bánh canh to mềm, nước dùng béo ngậy từ cua đồng giã nhuyễn, thêm chả cá và hành lá. Là món ăn vặt yêu thích của người Sài Gòn ở mọi lứa tuổi.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjuIr9ETJPS9F0vo7Rj4qTHRXi0CjQn6x1ZQ&s" alt="Bánh gật gù">
+            <h3>Bánh Gật Gù Tiên Yên</h3>
+            <p>Loại bánh cuốn đặc biệt của vùng Tiên Yên, làm từ gạo địa phương, mềm mướt và dai. Ăn kèm với thịt quay và nước chấm pha chế đặc biệt.</p>
         </div>
 
     </div>
@@ -114,17 +115,16 @@
     <div class="vanhoa-box">
         <h3>Lễ hội truyền thống</h3>
         <ul>
-            <li><strong>Lễ hội Nguyên Tiêu (15 tháng Giêng):</strong> Lễ hội lớn của người Hoa tại quận 5 (Chợ Lớn) với đèn lồng, múa lân rồng và các hoạt động văn hóa đặc sắc.</li>
-            <li><strong>Lễ hội Tết Nguyên Đán:</strong> Đường hoa Nguyễn Huệ trang trí rực rỡ, thu hút hàng triệu người dân đến thăm trong 3 ngày Tết.</li>
-            <li><strong>Đường sách TP.HCM (quanh năm):</strong> Phố sách văn hóa tại đường Đinh Lễ – Nguyễn Đình Chiểu, là điểm hẹn văn hóa của người yêu sách.</li>
+            <li><strong>Hội xuân Yên Tử (từ mùng 10 tháng Giêng):</strong> Lễ hội lớn nhất miền Bắc, kéo dài đến hết tháng 3 âm lịch. Hàng triệu phật tử hành hương lên đỉnh Yên Tử.</li>
+            <li><strong>Lễ hội Carnaval Hạ Long (tháng 4 Dương lịch):</strong> Lễ hội đường phố sôi động với diễu hành, biểu diễn nghệ thuật đặc sắc.</li>
+            <li><strong>Hội đình Quan Lạn (tháng 6 âm lịch):</strong> Lễ hội trên đảo Quan Lạn tái hiện chiến thắng chống quân Nguyên Mông thế kỷ XIII.</li>
         </ul>
 
-        <h3>Đặc sản văn hóa</h3>
+        <h3>Văn hóa đặc trưng</h3>
         <ul>
-            <li>Chợ Bến Thành – biểu tượng của TP.HCM với lịch sử hơn 100 năm.</li>
-            <li>Phố đi bộ Nguyễn Huệ – trung tâm văn hóa, sự kiện của thành phố.</li>
-            <li>Bảo tàng Lịch sử TP.HCM và Bảo tàng Chứng tích Chiến tranh.</li>
-            <li>Văn hóa ẩm thực đêm đa dạng với hàng trăm món ăn đường phố.</li>
+            <li>Nghề nuôi trồng và đánh bắt hải sản với những làng chài nổi trên Vịnh Hạ Long.</li>
+            <li>Nghề khai thác than đá truyền thống tại Cẩm Phả và Uông Bí.</li>
+            <li>Văn hóa đa dân tộc: Kinh, Tày, Dao, Sán Dìu... với trang phục và phong tục phong phú.</li>
         </ul>
     </div>
 
@@ -134,15 +134,15 @@
     <h2>5. Thư viện hình ảnh</h2>
 
     <div class="gallery">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3IE1hxzMhbwzHFFyw4Jiniq11JAX5O3F43Q&s" alt="Skyline TP.HCM">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Bitexco_Financial_Tower_20022012_cropped.JPG/330px-Bitexco_Financial_Tower_20022012_cropped.JPG" alt="Bitexco">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG/330px-W_C%E1%BB%A7_Chi_%C4%90%E1%BB%8Ba_%C4%91%E1%BA%A1o_C%E1%BB%A7_Chi_ng%E1%BB%A5y_trang.JPG" alt="Địa đạo Củ Chi">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvKUSA6IztdKcEzUtoMuHjpMEmklbhciHwrg&s" alt="UBND TP.HCM">
-        <img src="https://static.tuoitre.vn/tto/i/s626/2015/04/25/41B6gnc8.jpg" alt="Sài Gòn về đêm">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNCTkx5Dk6EKhvw6t35PDh9bFeSC307Y8S2Q&s" alt="Vịnh Hạ Long">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqYBk7fsgUD7r4jY8XvDfdcDHI8PeJKHJEKg&s" alt="Yên Tử">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDara2PC-M6_i-gWtTGiDI75DpIteI7kR9UA&s" alt="Tuần Châu">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQP4BeLqKdNKfC5TFiouoDKrDU2BtQFNIPnw&s" alt="Đảo Hạ Long">
+        <img src="https://vnn-imgs-f.vgcloud.vn/2018/10/17/11/6-hang-dong-dep-than-tien-o-ha-long-4.jpg?width=0&s=0u0nCIlnAyIjSoZEwADzrg" alt="Hang động Hạ Long">
     </div>
 
     <br>
-    <a href="../mien-nam.html" style="color:#c0392b; font-weight:bold;">← Quay lại Miền Nam</a>
+    <a href="../mien-bac.html" style="color:#c0392b; font-weight:bold;">← Quay lại Miền Bắc</a>
 
 </main>
 
